objects/Reservation__c.object
<CustomObject>
    <description>Contains data about reservations made by clients (Guest) on a hotel room (Room)</description>
    <fields>
        <fullName>Billing__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing</label>
        <referenceTo>Billing__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Check_In__c</fullName>
        <description>Date when a guest wants to check in</description>
        <label>Check In</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Out__c</fullName>
        <description>Date when guest wants to check out</description>
        <label>Check Out</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has a guest confirm his stay in the hotel?</description>
        <label>Confirmed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Guest__c</fullName>
        <description>Links to a guest who had made the booking</description>
        <label>Guest</label>
        <referenceTo>Guest__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reservation_Cost__c</fullName>
        <formula>(Check_Out__c -  Check_In__c ) * Room__r.Price_for_Night__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reservation_Date__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reservation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <description>Room to which reservation is made</description>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Reservations</relationshipLabel>
        <relationshipName>Reservations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Reservation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Res-{0000}</displayFormat>
        <label>Reservation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>